kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-prod
  labels:
    app.kubernetes.io/part-of: frontend-app
