kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: frontend-prod
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
